fixing issue and adding feature

--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
                                 </div>
                                 <div class="col-xl-1 col-7 col-md-9 d-flex align-items-center justify-content-end justify-content-xl-start ">
                                     <div class="dark-light-changer-button pt-xl-1 pt-4">
-                                        <button class="mt-2 bg-transparent"><i class="fas fa-moon text-white"></i></button>
+                                        <button class="mt-2 bg-transparent"><i class="fas fa-sun text-white"></i></button>
                                     </div>
                                 </div>
                                 <div class="col-xl-2 d-none d-xl-flex align-items-center justify-content-end justify-content-xl-start">
                                     <div class="pt-2">
-                                        <a href="" class="text-white">English | USD</a>
+                                        <a href="" class="text-white language-button-text-issue">English | USD</a>
                                     </div>
                                 </div>
                                 <div class="col-5 col-md-3 d-xl-none d-flex align-items-center justify-content-end">
@@ -324,7 +324,7 @@
             </div>
         </div>
         <!-- ----------------- pair section ----------------- -->
-        <div class="pair-section-wrapper container p-xl-5">
+        <div class="pair-section-wrapper container py-xl-5">
             <div class="pair-section ">
                 <div class="pair-section-upper px-xl-5">
                     <a href="" class="pair-section-upper-news-btn">News</a>
@@ -590,7 +590,7 @@
                             <div class="row">
                                 <div class="col-4 p-3">
                                     <ul class="list-unstyled" data-aos="fade-up">
-                                        <li class="">Tools</li>
+                                        <li class="text-primary">Tools</li>
                                         <li class="">
                                             <a href="">Download App</a>
                                         </li>
@@ -604,7 +604,7 @@
                                 </div>
                                 <div class="col-4 p-3">
                                     <ul class="list-unstyled" data-aos="fade-up">
-                                        <li class="">Service</li>
+                                        <li class="text-primary">Service</li>
                                         <li class="">
                                             <a href="">Agreement</a>
                                         </li>
@@ -626,7 +626,7 @@
                                 </div>
                                 <div class="col-4 p-3">
                                     <ul class="list-unstyled" data-aos="fade-up">
-                                        <li class="">Help</li>
+                                        <li class="text-primary">Help</li>
                                         <li class="">
                                             <a href="">Agreement</a>
                                         </li>
