--- a/index.html
+++ b/index.html
@@ -307,17 +307,17 @@
         <div class="swiper-section-wrapper">
             <div class="container swiper-section p-5">
                 <div class=" row">
-                    <div class="col-12 col-xl-6  col-xl-3 my-3 my-xl-0 d-flex align-items-center justify-content-center " data-aos="fade-up">
+                    <div class="col-12 r-col-xl-3  col-lg-6 my-3 my-xl-0 d-flex align-items-center justify-content-center " data-aos="fade-up">
                         <img src="./assets/img/swiper03.png" alt="">
 
                     </div>
-                    <div class="col-12 col-xl-6 pt-xl-3 pt-md-0 col-xl-3 my-3 my-xl-0 d-flex align-items-center justify-content-center" data-aos="fade-up">
+                    <div class="col-12 r-col-xl-3 col-lg-6 pt-md-0 my-3 my-xl-0 d-flex align-items-center justify-content-center" data-aos="fade-up">
                         <img src="./assets/img/swiper02.png" alt="">
                     </div>
-                    <div class="col-12 col-xl-6 col-xl-3 my-3 my-xl-0 d-flex align-items-center justify-content-center" data-aos="fade-up">
+                    <div class="col-12 r-col-xl-3 col-lg-6 my-3 my-xl-0 d-flex align-items-center justify-content-center" data-aos="fade-up">
                         <img src="./assets/img/swiper03.png" alt="">
                     </div>
-                    <div class="col-12 col-xl-6 col-xl-3 pt-xl-3 pt-md-0 my-3 m y-xl-0 d-flex align-items-center justify-content-center" data-aos="fade-up">
+                    <div class="col-12 r-col-xl-3 col-lg-6  pt-md-0 my-3 m y-xl-0 d-flex align-items-center justify-content-center" data-aos="fade-up">
                         <img src="./assets/img/swiper04.png" alt="">
                     </div>
                 </div>
