fixing table issue

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                     <th scope="col" class="text-primary-color">Last Price</th>
                                     <th scope="col" class="text-primary-color">Change</th>
                                     <th scope="col" class="text-primary-color">24H Vol</th>
-                                    <th scope="col" class="text-primary-color">Trade</th>
+                                    <th scope="col" class="text-primary-color justify-content-end d-flex">Trade</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -355,7 +355,7 @@
                                     <td class="text-primary-color">Mark</td>
                                     <td class="text-primary-color">Otto</td>
                                     <td class="text-primary-color">@mdo</td>
-                                    <td><button class="btn btn-success ">Trade</button></td>
+                                    <td class="justify-content-end d-flex"><button class="btn btn-success justify-content-end d-flex">Trade</button></td>
 
                                 </tr>
                                 <tr>
@@ -366,7 +366,7 @@
                                     <td class="text-primary-color">Mark</td>
                                     <td class="text-primary-color">Otto</td>
                                     <td class="text-primary-color">@mdo</td>
-                                    <td><button class="btn btn-success ">Trade</button></td>
+                                    <td class="justify-content-end d-flex"><button class="btn btn-success justify-content-end d-flex">Trade</button></td>
 
 
                                 </tr>
@@ -377,8 +377,8 @@
                                     </th>
                                     <td class="text-primary-color">Mark</td>
                                     <td class="text-primary-color">Otto</td>
-                                    <td class="text-primary-color">@mdo</td>
-                                    <td><button class="btn btn-success ">Trade</button></td>
+                                    <td class=" text-primary-color">@mdo</td>
+                                    <td class="justify-content-end d-flex"><button class="btn btn-success ">Trade</button></td>
 
 
                                 </tr>
